src/css/Lyrics/Mixed.css
/* ... */
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line .word,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line .letter {
  --gradient-position: -20%;
  --gradient-color: 255;
  --gradient-alpha: 0.85;
  --gradient-alpha-end: 0.5;
  --gradient-degrees: 90deg;
  --gradient-offset: 0%;
}

@property --SLM_GradientPosition {
  syntax: "<percentage>";
  inherits: false;
  initial-value: -50%;
}

#SpicyLyricsPage.SpicyRenderer.SimpleLyricsMode .LyricsContainer .LyricsContent .line,
#SpicyLyricsPage.SpicyRenderer.SimpleLyricsMode .LyricsContainer .LyricsContent .line .word,
#SpicyLyricsPage.SpicyRenderer.SimpleLyricsMode .LyricsContainer .LyricsContent .line .letter {
  --gradient-alpha: 1;
  --gradient-alpha-end: 0.3;
}

#SpicyLyricsPage.SpicyRenderer.SimpleLyricsMode
  .LyricsContainer
  .LyricsContent
  .line
  .word:not(.dot),
#SpicyLyricsPage.SpicyRenderer.SimpleLyricsMode .LyricsContainer .LyricsContent .line .letter {
  --SLM_GradientPosition: -50%;
  --gradient-position: var(--SLM_GradientPosition, -50%) !important;
  --gradient-offset: 30% !important;
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Active,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Active .word,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Active .letter,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.static {
  background-image: linear-gradient(
    var(--gradient-degrees),
    rgba(255, 255, 255, var(--gradient-alpha)) var(--gradient-position),
    rgba(255, 255, 255, var(--gradient-alpha-end))
      calc(var(--gradient-position) + 20% + var(--gradient-offset))
  );
}
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.NotSung,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.NotSung .word,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.NotSung .letter {
  text-shadow: 0 0 var(--BlurAmount, 0)
    rgba(
      var(--gradient-color),
      var(--gradient-color),
      var(--gradient-color),
      var(--gradient-alpha-end)
    );
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Sung,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Sung .word,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Sung .letter,
#SpicyLyricsPage.SpicyRenderer
  .LyricsContainer
  .SpicyLyricsScrollContainer[data-lyrics-type="Static"]
  .line {
  text-shadow: 0 0 var(--BlurAmount, 0)
    rgba(var(--gradient-color), var(--gradient-color), var(--gradient-color), var(--gradient-alpha));
}

/* #SpicyLyricsPage.SpicyRenderer.Podcast .LyricsContainer .LyricsContent .line,
#SpicyLyricsPage.SpicyRenderer.Podcast .LyricsContainer .LyricsContent .line .word {
  background-image: linear-gradient(var(--gradient-degrees), rgba(255, 255, 255, var(--gradient-alpha)) var(--gradient-position), rgba(0, 0, 0, var(--gradient-alpha-end)) calc(var(--gradient-position) + 20% + var(--gradient-offset))) !important;
} */

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line {
  --BlurAmount: 0px;

  --DefaultLyricsScale: 0.95;
  --DefaultEmphasisLyricsScale: 0.95;
  --DefaultLineScale: 1;

  --Vocal-NotSung-opacity: 0.51;
  --Vocal-Active-opacity: 1;
  --Vocal-Sung-opacity: 0.497;

  --Vocal-Hover-opacity: 1;
  --gradient-degrees: 180deg !important;
  --gradient-alpha-end: 0.35 !important;

  letter-spacing: 0;
  --lyrics-line-height: 1.1818181818;
  line-height: var(--lyrics-line-height) !important;
  direction: ltr;
}

#SpicyLyricsPage.SpicyRenderer.SimpleLyricsMode .LyricsContainer .LyricsContent .line {
  --Vocal-NotSung-opacity: 0.45;
  --Vocal-Sung-opacity: 0.35;
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.rtl {
  direction: rtl !important;
  transform-origin: right center !important;
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.rtl .word,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.rtl .letter {
  --gradient-degrees: -90deg !important;
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.rtl,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.rtl .word,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.rtl .letter,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.rtl .letterGroup {
  padding-bottom: 0.25em;
  padding-top: 0.15em;
  margin-bottom: -0.25em;
  margin-top: -0.15em;
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line .word,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line .letterGroup {
  transform-origin: center center;
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line .word.PartOfWord,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line .letterGroup.PartOfWord {
  transform-origin: right center;
}

#SpicyLyricsPage.SpicyRenderer
  .LyricsContainer
  .LyricsContent
  .line
  .word.PartOfWord
  + :is(.word.PartOfWord, .letterGroup.PartOfWord),
#SpicyLyricsPage.SpicyRenderer
  .LyricsContainer
  .LyricsContent
  .line
  .letterGroup.PartOfWord
  + :is(.word.PartOfWord, .letterGroup.PartOfWord) {
  transform-origin: center center;
}

#SpicyLyricsPage.SpicyRenderer
  .LyricsContainer
  .LyricsContent
  .line
  .word.PartOfWord
  + :is(.word, .letterGroup),
#SpicyLyricsPage.SpicyRenderer
  .LyricsContainer
  .LyricsContent
  .line
  .letterGroup.PartOfWord
  + :is(.word, .letterGroup) {
  transform-origin: left center;
}
/* ... */

